Issue#224 Invoice: Center align selected client

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -4388,3 +4388,5 @@ i.material-icons.close:hover {
 .td-checkbox { padding-top: 0 !important; }
 
 #log_date { color: #454545; }
+
+input.select-dropdown { text-align: center; }
